# worm-rs

./: Cargo.toml  README.md
derive/: Cargo.toml  README.md
derive/src/: derive.rs  lib.rs
examples/: ping.rs  server.rs
src/: client.rs  command.rs  decoder.rs  encoder.rs  error.rs  lib.rs  server.rs  tests.rs  value.rs
