[package]
name = "worm"
version = "0.1.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version = "0.3", features=["full"]}
futures = "*"
thiserror = "1"
anyhow = "1"
ordered-float = "2"
async-recursion = "0.3"
async-trait = "0.1"
worm-derive = {path = "./derive", version = "0.1"}
log = "0.4"

[dev-dependencies]
env_logger = "0.8"
